applications/hello-world/base/hello-world-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
    environment: development
