applications/hello-world/base/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  namespace: hello-world
  labels:
    app: drupal
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
